--- a/SAAOSX/Maps/Maps.storyboard
+++ b/SAAOSX/Maps/Maps.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
-        <plugIn identifier="com.apple.MapKitIBPlugin" version="14460.31"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <plugIn identifier="com.apple.MapKitIBPlugin" version="14490.70"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -31,7 +31,7 @@
         <!--Map View Controller-->
         <scene sceneID="P7u-tJ-64s">
             <objects>
-                <viewController id="Zga-Mt-chd" customClass="MapViewController" customModule="SAAOSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Zga-Mt-chd" customClass="MapViewController" customModule="SAAo_SX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="7iG-ad-rGT">
                         <rect key="frame" x="0.0" y="0.0" width="924" height="416"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -75,6 +75,10 @@
                                     <constraint firstAttribute="height" constant="200" id="NQO-Ev-oRP"/>
                                     <constraint firstAttribute="width" constant="300" id="YFS-Vi-f3L"/>
                                 </constraints>
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="yyP-bH-sPw">
+                                    <rect key="frame" x="-100" y="-100" width="300" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
                                 <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="Q8o-F3-GoW">
                                     <rect key="frame" x="284" y="0.0" width="16" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
