Removed notes functionality from backport release
# Conflicts:
#	SAAOSX.xcodeproj/project.pbxproj
#	SAAOSX.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
#	SAAOSX/AppDelegate.swift
#	SAAOSX/TextEdition/InfoViewController.swift
#	SAAOSX/TextEdition/TextEdition.storyboard
#	SAAOSX/TextEdition/TextViewController.swift

--- a/SAAOSX/Preferences/Preferences.storyboard
+++ b/SAAOSX/Preferences/Preferences.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -81,73 +80,13 @@
             </objects>
             <point key="canvasLocation" x="350" y="143"/>
         </scene>
-        <!--Notes-->
+        <!--VolumeDownloader-->
         <scene sceneID="adk-aN-JY4">
             <objects>
-                <viewController title="Notes" id="8MN-Nc-QyZ" customClass="NotesPreferencesViewController" customModule="SAAo_SX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="VolumeDownloader" id="8MN-Nc-QyZ" customClass="VolumeDownloadViewController" customModule="SAAo_SX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="PyD-90-eb2">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="M5d-PV-g5J">
-                                <rect key="frame" x="18" y="189" width="84" height="17"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Export Notes" id="9Lr-EP-Ly5">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dqw-oV-Poe">
-                                <rect key="frame" x="174" y="178" width="92" height="32"/>
-                                <buttonCell key="cell" type="push" title="As .docx" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mKY-Fz-ibH">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="exportAllNotes:" target="8MN-Nc-QyZ" id="NXw-z8-4Bc"/>
-                                </connections>
-                            </button>
-                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="RCY-Fq-Vkc">
-                                <rect key="frame" x="18" y="246" width="414" height="34"/>
-                                <textFieldCell key="cell" selectable="YES" placeholderString="WARNING Annotation functionality is currently experimental" id="W0T-e5-hly">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="orv-Sy-ClZ">
-                                <rect key="frame" x="18" y="132" width="117" height="17"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Delete From Cloud" id="tnd-MI-MSF">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MKf-ZK-hyO">
-                                <rect key="frame" x="174" y="122" width="80" height="32"/>
-                                <buttonCell key="cell" type="push" title="Delete" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="era-qR-6vv">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <color key="contentTintColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
-                                <connections>
-                                    <action selector="deleteCloudKitData:" target="8MN-Nc-QyZ" id="95D-gP-xMO"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="M5d-PV-g5J" firstAttribute="top" secondItem="RCY-Fq-Vkc" secondAttribute="bottom" constant="40" id="CGx-i0-UzD"/>
-                            <constraint firstItem="orv-Sy-ClZ" firstAttribute="top" secondItem="M5d-PV-g5J" secondAttribute="bottom" constant="40" id="URE-5c-6qt"/>
-                            <constraint firstItem="RCY-Fq-Vkc" firstAttribute="top" secondItem="PyD-90-eb2" secondAttribute="top" constant="20" id="VSn-Ww-9RQ"/>
-                            <constraint firstItem="RCY-Fq-Vkc" firstAttribute="leading" secondItem="PyD-90-eb2" secondAttribute="leading" constant="20" id="Vwv-fc-eK2"/>
-                            <constraint firstItem="dqw-oV-Poe" firstAttribute="leading" secondItem="M5d-PV-g5J" secondAttribute="trailing" constant="80" id="YU4-ln-ohL"/>
-                            <constraint firstItem="MKf-ZK-hyO" firstAttribute="leading" secondItem="dqw-oV-Poe" secondAttribute="leading" id="byP-IO-JPY"/>
-                            <constraint firstItem="M5d-PV-g5J" firstAttribute="leading" secondItem="PyD-90-eb2" secondAttribute="leading" constant="20" id="gUk-9r-40g"/>
-                            <constraint firstItem="MKf-ZK-hyO" firstAttribute="firstBaseline" secondItem="orv-Sy-ClZ" secondAttribute="firstBaseline" id="kjg-xc-PTd"/>
-                            <constraint firstAttribute="trailing" secondItem="RCY-Fq-Vkc" secondAttribute="trailing" constant="20" id="mMT-Mp-CDe"/>
-                            <constraint firstItem="orv-Sy-ClZ" firstAttribute="leading" secondItem="PyD-90-eb2" secondAttribute="leading" constant="20" id="o8L-Md-s8V"/>
-                            <constraint firstItem="dqw-oV-Poe" firstAttribute="top" secondItem="RCY-Fq-Vkc" secondAttribute="bottom" constant="40" id="wjl-j2-boO"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="wwQ-8z-LvB" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -163,7 +102,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dxm-wI-lwv">
-                                <rect key="frame" x="66" y="231" width="162" height="17"/>
+                                <rect key="frame" x="66" y="232" width="162" height="16"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Default text pane number:" id="srY-pf-a7i">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -171,7 +110,7 @@
                                 </textFieldCell>
                             </textField>
                             <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Hp3-jN-7SW">
-                                <rect key="frame" x="234" y="227" width="71" height="24"/>
+                                <rect key="frame" x="234" y="228" width="73" height="24"/>
                                 <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="n1E-kn-T3J">
                                     <font key="font" metaFont="system"/>
                                     <segments>
